2006-08-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thbrk/thbrk.c (brk_do): (Optimization) When successfully
	recovered, stop walking immediately, increasing chance to be
	superseded earlier by better candidate. Also removed unnecessary check 
	for str_pos < len, because it's guaranteed by brk_recover() when return
	value is not -1.

2006-08-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thbrk/thbrk.c (+brk_pool_allocator_use,
	brk_pool_allocator_clear): Guarded the free list with ref count, for
	thread safety.

	* src/thbrk/thbrk.c (th_brk): Requested to use the break pool
	allocator at the beginning.

2006-08-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thbrk/thbrk.c (brk_pool_node_new, brk_pool_free_node):
	~(Optimization) Kept freed BrkPool nodes for reuse in next allocation, 
	reducing calls to malloc().

	* src/thbrk/thbrk.c (+brk_pool_allocator_clear, th_brk): Cleared the 
	free list when work is done.

2006-08-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thbrk/thbrk.c (brk_do): Calculated penalty for unrecoverable
	string with (len - recent break), not (strlen(s) - recent break).

2006-08-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in (LT_REVISION): Incremented library revision.

	* src/thbrk/thbrk.c (brk_do): (Optimization) Do not contest best break 
	when trie walking crashes in recover mode. It won't win recovery 
	criterion anyway. Also got rid of one inner loop condition.

2006-08-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thbrk/thbrk.c (brk_recover): Do not try to recover after a
	leading vowel.

2006-08-26  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thbrk/thbrk.c (th_brk): Tokenized mixed Thai-English text and
	called brk_do() chunk by chunk.

	* src/thbrk/thbrk.c (brk_do, brk_recover): Accepted string and length
	rather than null-terminated string, to support chunk-wise breaking.
